...
                                <connections>
                                    <action selector="segmentedControlValueChanged:" destination="8rJ-Kc-sve" eventType="valueChanged" id="fIp-Kj-EZq"/>
                                </connections>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UpD-ri-qgg">
                                <rect key="frame" x="87.5" y="216" width="200" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="SecondView_TextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="kU1-b5-PTS"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="textFieldChanged:" destination="8rJ-Kc-sve" eventType="editingChanged" id="Ozl-zc-3V1"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbC-le-XB9">
                                <rect key="frame" x="166" y="346" width="42" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="SecondView_Label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <constraint firstItem="Lwj-XX-7PL" firstAttribute="centerX" secondItem="O1u-W8-tvY" secondAttribute="centerX" id="eGJ-Fl-1ps"/>
                            <constraint firstItem="Lwj-XX-7PL" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="55" id="hQ6-6w-Z70"/>
                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="label" destination="HbC-le-XB9" id="oEb-Js-Y7g"/>
                        <outlet property="segmentedControl" destination="Lwj-XX-7PL" id="AMt-4S-3jA"/>
                        <outlet property="textField" destination="UpD-ri-qgg" id="Oj9-lY-TDx"/>
                    </connections>
                </viewController>
...
